# coffee-rag

./: .gitignore  README.md  docker-compose.yml  postgresql.dockerfile  pyproject.toml
coffee/: config.py  main.py  rag.py
datasets/: catalog.csv
