[tool.poetry]
name = "coffee"
version = "0.1.0"
description = ""
authors = ["Nattapon <nattapon@weaverbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.2.0"
asyncpg = "^0.29.0"
transformers = "^4.45.1"
sentence-transformers = ">=2.2.2,<2.3.0"
pgvector = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
